[] hmsPushEvent unexpected_error

--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@capacitor/android": "3.6.0",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.6.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.3",
+    "@hmscore/cordova-plugin-hms-push": "^6.3.0-304",
+    "@hmscore/ionic-native-hms-push": "^6.3.0-304",
     "@ionic/angular": "^6.1.9",
+    "cordova-plugin-androidx": "^3.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
